# ana-automation-ui

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  ana-automation-ui.env.example  nginx.conf  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml  container.yml
app/: apps.json  apps.py  auth.py  config.py  logging_config.py  mail.py  main.py  ratelimit.py
app/static/: app.js
app/templates/: index.html  request_sent.html
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap-apps.yaml  deployment.yaml  httproute.yaml  ingress.yaml  secret-provider-class.yaml  service.yaml
site/: index.html
tests/: conftest.py  test_apps.py  test_auth.py  test_config.py  test_logging.py  test_mail.py  test_ratelimit.py  test_routes.py
