[project]
name = "ana-automation-ui"
version = "0.3.1.dev1"
description = "OIDC-authenticated FastAPI portal for the ANA NSI automation stack"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.137.1",
    "uvicorn==0.49.0",
    "jinja2==3.1.6",
    "aiosmtplib==5.1.1",
    "pydantic-settings==2.14.1",
    "python-multipart==0.0.32",
    "structlog==25.5.0",
]

[project.scripts]
ana-automation-ui = "app.main:run"

[dependency-groups]
dev = [
    "aiosmtpd==1.4.6",
    "httpx2==2.4.0",
    "mypy==2.1.0",
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = false
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "A",    # Builtins
    "B",    # Bugbear
    "C4",   # Comprehensions
    "D",    # Docstrings
    "E",    # pycodestyle Error
    "F",    # Pyflakes
    "G",    # Logging format
    "I",    # Isort
    "ISC",  # Implicit string concat
    "S",    # Bandit
    "T20",  # Print
    "W",    # pycodestyle Warning
    # "UP",   # Pyupgrade
]

# Match flake8-docstrings default behavior
pydocstyle.convention = "google" # or "numpy" / "pep257"
exclude = [
    ".git",
    ".cache",
    ".eggs",
    "__pycache__",
    "venv",
    ".venv",
]
ignore = [
    "D100",
    "D104",
    "S101",
    "T201",
]

per-file-ignores = { "tests/**" = ["D101", "D102", "D103"] }
